accessibility fix for beta contrast

--- a/app/assets/sass/gc-components/gc-beta.scss
+++ b/app/assets/sass/gc-components/gc-beta.scss
@@ -10,7 +10,7 @@
         font-weight: normal;
         padding: 6px 10px;
         background:  $gc-orange;
-        color: $gc-dark-blue;
+        color:  govuk-colour("black");
         font-weight: bold;
         margin-right: 10px;
     }
